--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
 		<org.slf4j-version>1.7.7</org.slf4j-version>
 	</properties>
 	<dependencies>
+
+        <!-- Alchemy API -->
+        <dependency>
+            <groupId>alchemyApi</groupId>
+            <artifactId>com.alchemyApi</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/AlchemyAPI.jar</systemPath>
+        </dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -33,14 +43,6 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-		<!-- AspectJ -->
-<!--
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<version>${org.aspectj-version}</version>
-		</dependency>
--->
 
 		<!-- Logging -->
 		<dependency>
@@ -80,13 +82,13 @@
 		</dependency>
 				
 		<!-- Servlet -->
-<!--
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>7.0.30</version>
 			<scope>provided</scope>
 		</dependency>
+<!--
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
