Add Stanford NLP

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
         </dependency>
 -->
 
+        <!-- Stanford NLP -->
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
